--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,51 @@
-# Node.js
-node_modules/
+# TypeScript/Node.js
+node_modules
+client/out
+*.vsix
+npm-debug.log
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.venv/
+
+# Logs
+logs
+*.log
+lsp.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Logs
-logs/
-*.log
-*.log.*
-
-# Dependency directories
-jspm_packages/
-bower_components/
-
-# Build output
-dist/
-build/
-out/
-
-# IDEs and editors
-.vscode/
-.idea/
+# Editor
+.idea
+.vscode-test
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-
-# OS files
+*.sw?
 .DS_Store
 Thumbs.db
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Miscellaneous
-*.swp
-*.bak
-*.tmp
-*.orig
-*.lock
-coverage/
