--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,10 +30,12 @@
     },
     {
       "name": "Python: Attach to Language Server",
-      "type": "python",
+      "type": "debugpy",
       "request": "attach",
-      "port": 5678,
-      "host": "localhost"
+      "connect": {
+        "host": "localhost",
+        "port": 5678
+      }
     }
   ],
   "compounds": [
